# university-database

./: .gitignore  .xo-config.json  LICENSE.txt  README.fa-IR.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/fonts/: persian-modern-regular-OFL.txt
src/: bidi-js.d.ts  global.css  highlighters.ts  project.ts  utils.ts
src/components/: Attribute.tsx  CodeBlock.tsx  Diamond.tsx  Edge.tsx  Entity.tsx  File.tsx  Folder.tsx  PartHeading.tsx  Relation.tsx  Text.tsx  TextLeaf.tsx  Vertex.tsx
src/scenes/: index.ts
src/scenes/end/: end.tsx  index.ts
src/scenes/er-model/: attributes-course-group.tsx  attributes-person-subclasses.tsx  attributes-person.tsx  attributes-student-studies.tsx  index.ts  part-er-model.tsx  relations-course-group.tsx  relations-major.tsx
src/scenes/install-mariadb/: directory-structure.tsx  docker-compose-command.tsx  docker-compose-file.tsx  docker-logo.tsx  docker-mirrors.tsx  index.ts  part-install-mariadb.tsx
src/scenes/install-packages/: index.ts  install-pdm.tsx  part-install-packages.tsx  pdm-add.tsx  pdm-init.tsx
src/scenes/setup/: create-db.tsx  create-table.tsx  index.ts  load-ext-sql.tsx  part-setup.tsx  run-jupyter-server.tsx
src/scenes/title/: index.ts  title.tsx
src/scenes/usage/: course-group-grades.tsx  def-connect.tsx  def-insert.tsx  index.ts  insert.tsx  part-usage.tsx  student-grades.tsx
university_database/: daemon.json  docker-compose.yaml  helpers.py  pyproject.toml  schema.plantuml  setup.ipynb  usage.ipynb
