[project]
name = "university_database"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "esdmr", email = "esdmr0@gmail.com"},
]
dependencies = [
    "pymysql>=1.1.1",
    "jupyterlab>=4.2.1",
    "pandas>=2.2.2",
    "ipython-sql>=0.5.0",
    "sqlalchemy>=2.0.30",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
